--- a/html/css/ie.css
+++ b/html/css/ie.css
@@ -56,7 +56,7 @@ table.circular{
 }
 
 #graficoproblema tr td:first-child{
-    border-left: 5px solid #FCAF17;
+    border-left: 5px solid #D04800;
 }
 
 #graficoassunto tr td:first-child{
